# LBM-CaImAn-MATLAB

./: .buildinfo  .gitignore  .readthedocs.yml  README.md  README.rst  assess_calibration.m  demo_LBM_pipeline.m  demo_registration.m  environment.yaml  environment.yml  example_parameters.m  example_startup.m  genindex.html  glossary.html  graph_conn_comp_mex.mexa64  graph_conn_comp_mex.mexw64  image_gallery.html  index.html  job.m  job.slurm  links.html  objects.inv  run_LBM_pipeline.m  search.html  searchindex.js  segmentPlane.m  startup.m  tippy_wiki_cache.json
.github/: documentation.yml
exclude/+scanimage/: CMakeLists.txt  builddoc.m  hostpixelcorr_noavg_00001_00001.tif  test.bat
exclude/+scanimage/+most/: Controller.m  GenericEventData.m  PDEPProp.m  PDEPPropEventData.m
exclude/+scanimage/+most/+gui/: constrastSlider.m  minimizeFigure.m  moveOntoScreen.m  popupMenuEdit.m  setLocation.m  toggleAdvancedPanel.m
exclude/+scanimage/+most/+idioms/: cellisequal.m  cellisequaln.m  dispError.m  isstring.m  xformPoints.m
exclude/+scanimage/+most/+json/: saveubjson.m
exclude/+scanimage/+most/+mimics/: getrect.m  im2bw.m  improfile.m  imshow.m  medfilt1.m  nanmin.m  quantile.m  xcorr2.m
exclude/+scanimage/+most/+mixin/: Coding.m  ValueComparable.m
exclude/+scanimage/+most/+util/: LogLevel.m  Uuid.m  cell2str.m  className.m  edgeFilter.m  getGitCommitHash.m  hex2bin.m  nextpowprimes.m  remindme_atom.m  setHandleStructGuideStyle.m  structOrObj2List.m
exclude/+scanimage/+mroi/: Roi.m  RoiTree.m  StimRoi.m
exclude/+scanimage/private/: SIController_classData.mat
(+1004 files in other folders)
